--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "pmat",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -22,7 +23,7 @@
   "scripts": {
     "start": "react-scripts start",
     "start-api": "cd ../api && venv/bin/flask run --no-debugger",
-    "build": "react-scripts build",
+    "build": "INLINE_RUNTIME_CHUNK=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
