incorporate github pages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pmat",
-  "homepage": ".",
+  "homepage": "https://timrobinson33.github.io/survey-sample",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -22,10 +22,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "start-api": "cd ../api && venv/bin/flask run --no-debugger",
     "build": "INLINE_RUNTIME_CHUNK=false react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -45,5 +46,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
+  }
 }
