--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.6.2",
+    "iframe-resizer": "^4.3.2",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
